--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@
     --slate: #434455;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
 
 .link {
   text-decoration: none;
@@ -26,6 +31,7 @@ color: var(--slate);
 /* reset */
 h1,h2,h3,h4,h5,h6,p{
     margin: 0;
+    padding: 0;
 }
 img{
     display: block;
@@ -97,12 +103,14 @@ list-style: none;
 text-decoration: none;
 display: flex;
 align-items: center;
+gap: 76px;
 }
 .header-list {
   font-style: normal;
   display: flex;
 align-items: center;
 gap: 40px;
+
 }
 
 .header-item {
@@ -164,8 +172,8 @@ font-size: 16px;
     font-family: var(--primary-font);
     font-weight: 700;
     background: var(--navyblue);
-    padding-top: 188px;
-    padding-bottom: 292px;
+    padding: 188px 0;
+    margin-bottom: 120px;
 }
 
 .section-container{
@@ -195,7 +203,8 @@ font-size: 16px;
     min-height: 56;
     padding: 16px 32px;
     border-radius: 4px;
-    border: 0;
+    border: none;
+    border-radius: 4px;
     display: block;
     margin: 0 auto;
 }
@@ -207,8 +216,7 @@ font-size: 16px;
 
 /* feature */
 .feature{
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding: 120px 0;
 }
 
 .feature-container{
@@ -227,7 +235,7 @@ gap: 24px;
 margin-left: 24px;
 margin: 0 auto;
 padding: 0;
-
+width: calc((100% - 72px) / 4);
 }
 
 .feature-hero {
@@ -275,13 +283,15 @@ padding: 0;
 }
 
 .technologies {
+    align-items: center;
   width: calc((100% - 48px) / 3);
 }
 
 /*our-team */
 .our-team {
     font-family: var(--primary-font);
-background: var(--cloud)
+background: var(--cloud);
+padding: 120px 0;
 }
 
 .our-team-container{
@@ -301,6 +311,8 @@ background: var(--cloud)
 
 .team-work {
     background-color: var(--white);
+    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 3 * 24px) / 4);
 }
 
 .our-team-list {
@@ -321,6 +333,7 @@ background: var(--cloud)
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--navyblue);
+    
 }
 
 .team-skill {
@@ -349,6 +362,7 @@ padding-bottom: 100px;
     color: var(--iris);
     margin-bottom: 16px;
     display: inline-block;
+    text-decoration: none;
 }
 
 .down-logo {
@@ -378,8 +392,12 @@ padding-bottom: 100px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: var(--iris);
-        background-color: var(--cloud);
-
+    background-color: var(--cloud);
+    padding: 12px 24px;
+    cursor: pointer;
+    border: 1px solid #e7e9fc;
+    border-radius: 4px;
+    justify-content: center;
 }
 
 .button-section{
@@ -387,10 +405,11 @@ padding-bottom: 100px;
 }
 
 .sections-filters {
-        display: flex;
+        flex-wrap: wrap;
             justify-items: center;
             margin-bottom: 72px;
-            gap: 24px;
+
+ 
 }
 
 
@@ -398,29 +417,37 @@ padding-bottom: 100px;
 .button-filters:focus{
     color: var(--white);
     background-color: var(--ocean);
+    border: 1px solid transparent;
+}
+
+.photo-portfolio{
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    padding: 32px 16px;
 }
 
 .section-list{
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
-    gap: 48px 28px;
+    row-gap: 48px;
+    column-gap: 24px;
+    justify-content: center;
+    margin-bottom: 72px;
 }
 .section-item{
     font-weight: 500;
     font-size: 20px;
         line-height: 1.2;
-        text-align: center;
         letter-spacing: 0.02em;
         color: var(--navyblue);
         text-transform: capitalize;
+        margin-bottom: 8px;
 }
 .section-row{
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: var(--slate);
-        background-color: var(--white);
         
 }
 
