--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,8 @@ padding-bottom: 100px;
 }
 
 .logo-link{
+    font-family: var(--secondary-font);
+    font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
@@ -366,8 +368,13 @@ padding-bottom: 100px;
 }
 
 .down-logo {
+    font-family: var(--secondary-font);
+        font-weight: 800;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
     color: var(--cloud);
-    
 }
 
 .footer-text {
