--- a/css/styles.css
+++ b/css/styles.css
@@ -22,19 +22,6 @@
   text-decoration: none;
 }
 
-.visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden; 
-}
-
 body {
     font-family: var(--primary-font);
 background-color: var(--white);
@@ -50,6 +37,20 @@ img{
     display: block;
     max-width: 100%;
     height: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 ul,ol{
@@ -191,7 +192,7 @@ font-size: 16px;
 }
 
 .section-container{
-max-width: 496px;
+
 }
 
 .hero-title {
@@ -200,10 +201,9 @@ max-width: 496px;
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--white);
-    width: 496px;
+    max-width: 496px;
     margin: 0 auto;
     margin-bottom: 48px;
-    
 }
 
 .hero-btn {
@@ -408,6 +408,10 @@ padding-bottom: 100px;
    
 }
 
+.section-row-filters{
+
+}
+
 .button-filters{
     font-family: var(--primary-font);
     font-weight: 500;
@@ -444,6 +448,8 @@ padding-bottom: 100px;
 }
 
 .photo-portfolio{
+    display: flex;
+    justify-content: center;
     border: 1px solid #e7e9fc;
     border-top: none;
     padding: 32px 16px;
