--- a/css/styles.css
+++ b/css/styles.css
@@ -412,8 +412,8 @@ padding-bottom: 120px;
     letter-spacing: 0.04em;
     color: var(--iris);
     background-color: var(--cloud);
-    padding: 12px 24px;
     cursor: pointer;
+    padding: 12px 24px;
     border: 1px solid #e7e9fc;
     border-radius: 4px;
     
@@ -422,7 +422,7 @@ padding-bottom: 120px;
 .button-section{
 display: flex;
 justify-content: center;
-padding: 12px 24px;
+gap: 24px;
 }
 
 .sections-filters {
