--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,6 @@ img{
     margin: -1px;
     border: 0;
     padding: 0;
-
     white-space: nowrap;
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
@@ -422,6 +421,8 @@ padding-bottom: 120px;
 .button-section{
 display: flex;
 justify-content: center;
+align-items: center;
+margin-bottom: 72px;
 gap: 24px;
 }
 
