--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,7 @@ border-bottom: 1px solid #e7e9fc;
     color: var(--iris);
         display: flex;
         align-items: center;
+        margin-right: 76px;
 }
 
 .logo-two {
@@ -417,7 +418,7 @@ padding-bottom: 120px;
 
 }
 
-.sections-filters {
+.section-filters {
   display: flex;
   gap: 24px;
   justify-content: center;
@@ -437,6 +438,7 @@ padding-bottom: 120px;
 }
 
 .photo-portfolio{
+
     justify-content: center;
     border: 1px solid #e7e9fc;
     border-top: none;
